fix: build theme script to static

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/icon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
-		<script src="/src/theme.ts"></script>
+		<script src="/theme.js"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
