--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
 		<script src="/theme.js"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div id="app">%sveltekit.body%</div>
 	</body>
 </html>
